--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    font-size: 15px;
 }
 
 
@@ -22,7 +23,7 @@ body {
     border-radius: 10px 0px 0px 10px;
     padding: 15px 25px;
     width: 100%;
-    max-width: 960px;
+    /* max-width: 960px; */
     display: flex;
     flex-direction: column;
     text-align: left;
@@ -30,7 +31,7 @@ body {
     justify-content: space-around;
     padding-left: 5%;
     padding-top: 5%;
-    height: 50vh;
+    /* height: 50vh; */
 }
 
 .car-type2 {
@@ -38,7 +39,7 @@ body {
     border-radius: 0px;
     padding: 15px 25px;
     width: 100%;
-    max-width: 960px;
+    /* max-width: 960px; */
     display: flex;
     flex-direction: column;
     text-align: left;
@@ -46,7 +47,7 @@ body {
     justify-content: space-around;
     padding-left: 5%;
     padding-top: 5%;
-    height: 50vh;
+    /* height: 50vh; */
 }
 
 .car-type3 {
@@ -54,7 +55,7 @@ body {
     border-radius: 0px 10px 10px 0px;
     padding: 15px 25px;
     width: 100%;
-    max-width: 960px;
+    /* max-width: 960px; */
     display: flex;
     flex-direction: column;
     text-align: left;
@@ -62,19 +63,18 @@ body {
     justify-content: space-around;
     padding-left: 5%;
     padding-top: 5%;
-    height: 50vh;
+    /* height: 50vh; */
 }
 
 .panel{
-    border-radius: 10px;
     padding: 15px 25px;
     width: 100%;
-    max-width: 960px;
+    max-width: 70%;
     display: flex;
     flex-direction: row;
     text-align: left;
     color: hsla(0, 0%, 100%, 0.75);
-    height: 50vh;
+    /* height: 100vh; */
     
     /* padding: 100px 0; */
     
@@ -141,3 +141,36 @@ p {
     width: 80%;
     font-size: 15px;
 }
+
+.learn-button1:hover {
+    background-color: hsl(31, 77%, 52%);
+    color: hsla(0, 0%, 100%, 0.75);
+ }
+
+ .learn-button2:hover {
+    background-color: hsl(184, 100%, 22%);
+    color: hsla(0, 0%, 100%, 0.75);
+ }
+
+ .learn-button3:hover {
+    background-color: hsl(179, 100%, 13%);
+    color: hsla(0, 0%, 100%, 0.75);
+ }
+
+
+
+@media (max-width: 375px) { 
+    .panel {
+        flex-direction: column;
+    }
+
+    .car-type1 {
+        border-radius: 10px 10px 0px 0px;
+    }
+
+    .car-type3 {
+        border-radius: 0 0 10px 10px;
+    }
+ }
+
+ 
